--- a/src/main/resources/templates/ZhuangTaiChaKan.html
+++ b/src/main/resources/templates/ZhuangTaiChaKan.html
@@ -11,23 +11,23 @@
     <!-- Responsive datatable examples -->
     <link href="../static/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet"
           type="text/css"/><!-- Bootstrap Css -->
-    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/><!-- Icons Css -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
-    <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <link href="../static/css/app.min.css" rel="stylesheet" type="text/css"/>
 
 
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
 </head>
 <style>
-    .vertical-menu{
-        background-color:#F0FFFF;
+    .vertical-menu {
+        background-color: #F0FFFF;
         width: 200px;
     }
 
 </style>
 
 
-<body data-sidebar="light" ><!-- Begin page -->
+<body data-sidebar="light"><!-- Begin page -->
 <div id="layout-wrapper">
     <header id="page-topbar">
         <div class="navbar-header">
@@ -35,7 +35,7 @@
                 <div class="navbar-brand-box"><a href="index.html" class="logo logo-dark"><span class="logo-sm"><img
                         src="../static/images/logo-sm-dark.png" alt="" height="22"></span><span class="logo-lg"><img
                         src="../static/images/logo-dark.png" alt="" height="20"></span></a><a href="index.html"
-                                                                                           class="logo logo-light"><span
+                                                                                              class="logo logo-light"><span
                         class="logo-sm"><img src="../static/images/logo-sm-light.png" alt="" height="22"></span><span
                         class="logo-lg"><img src="../static/images/logo-light.png" alt="" height="20"></span></a></div>
                 <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect"
@@ -154,9 +154,11 @@
                         <div class="px-lg-2">
                             <div class="row no-gutters">
                                 <div class="col"><a class="dropdown-icon-item" href="#"><img
-                                        src="../static/images/brands/github.png" alt="Github"><span>GitHub</span></a></div>
+                                        src="../static/images/brands/github.png" alt="Github"><span>GitHub</span></a>
+                                </div>
                                 <div class="col"><a class="dropdown-icon-item" href="#"><img
-                                        src="../static/images/brands/bitbucket.png" alt="bitbucket"><span>Bitbucket</span></a>
+                                        src="../static/images/brands/bitbucket.png"
+                                        alt="bitbucket"><span>Bitbucket</span></a>
                                 </div>
                                 <div class="col"><a class="dropdown-icon-item" href="#"><img
                                         src="../static/images/brands/dribbble.png" alt="dribbble"><span>Dribbble</span></a>
@@ -270,7 +272,8 @@
                 <!-- Left Menu Start -->
                 <ul class="metismenu list-unstyled" id="side-menu">
                     <li class="menu-title">菜单</li>
-                    <li><a href="index.html" class="waves-effect"><i class="ri-dashboard-line"></i><span class="badge badge-pill badge-success float-right">1</span><span>主页</span></a></li>
+                    <li><a href="index.html" class="waves-effect"><i class="ri-dashboard-line"></i><span
+                            class="badge badge-pill badge-success float-right">1</span><span>主页</span></a></li>
                     <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i class="ri-calendar-2-line"></i><span>设备状态看板</span></a>
 
                         <ul class="sub-menu" aria-expanded="false">
@@ -292,7 +295,8 @@
 
                     </li>
 
-                    <li><a href="javascript: void(0);" class="waves-effect"><i class="ri-store-2-line"></i><span>产量分析看板</span></a>
+                    <li><a href="javascript: void(0);" class="waves-effect"><i
+                            class="ri-store-2-line"></i><span>产量分析看板</span></a>
 
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a href="ChanLiang.html">产量数据</a></li>
@@ -301,12 +305,15 @@
 
                     </li>
 
-                    <li><a href="ZhuangTaiFenBu.html" class="has-arrow waves-effect"><i class="ri-mail-send-line"></i><span>状态分布看板</span></a>
+                    <li><a href="ZhuangTaiFenBu.html" class="has-arrow waves-effect"><i
+                            class="ri-mail-send-line"></i><span>状态分布看板</span></a>
                     </li>
 
-                    <li><a href="OEE.html" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>整线OEE分析</span></a></li>
+                    <li><a href="OEE.html" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>整线OEE分析</span></a>
+                    </li>
 
-                    <li><a href="knifes.html" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>刀具分析</span></a></li>
+                    <li><a href="knifes.html" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>刀具分析</span></a>
+                    </li>
 
                 </ul>
             </div><!-- Sidebar -->
@@ -329,7 +336,7 @@
                         </div>
                     </div>
                 </div><!-- end page title -->
-                <div class="row"  >
+                <div class="row">
                     <div class="col-md-4">
                         <div class="card" style="width: 200px">
                             <div class="card-body" align="center">
@@ -342,87 +349,77 @@
                                         <h5 class="mb-0" style="color: #ff1741;font-size: x-large">停机（红）</h5>
                                         <h5 class="mb-0" style="color: #7c8a96;font-size: x-large">离线（灰）</h5>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div><!-- end row --></div><!-- container-fluid --></div><!-- End Page-content -->
+
+
+            <footer class="footer">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <script>document.write(new Date().getFullYear())</script>
+                            © Nazox.
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="text-sm-right d-none d-sm-block">Crafted with <i
+                                    class="mdi mdi-heart text-danger"></i>By <a href="http://www.bootstrapmb.com/">bootstrapmb</a>
                             </div>
                         </div>
                     </div>
-
-
-
-
-
-                </div><!-- end row --></div><!-- container-fluid --></div><!-- End Page-content -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <footer class="footer">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <script>document.write(new Date().getFullYear())</script>
-                        © Nazox.
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="text-sm-right d-none d-sm-block">Crafted with <i
-                                class="mdi mdi-heart text-danger"></i>By <a href="http://www.bootstrapmb.com/">bootstrapmb</a>
-                        </div>
-                    </div>
                 </div>
+            </footer>
+        </div><!-- end main content-->
+    </div><!-- END layout-wrapper --><!-- Right Sidebar -->
+    <div class="right-bar">
+        <div data-simplebar class="h-100">
+            <div class="rightbar-title px-3 py-4"><a href="javascript:void(0);" class="right-bar-toggle float-right"><i
+                    class="mdi mdi-close noti-icon"></i></a><h5 class="m-0">Settings</h5></div><!-- Settings -->
+            <hr class="mt-0"/>
+            <h6 class="text-center mb-0">Choose Layouts</h6>
+            <div class="p-4">
+                <div class="mb-2"><img src="../static/images/layouts/layout-1.jpg" class="img-fluid img-thumbnail"
+                                       alt="">
+                </div>
+                <div class="custom-control custom-switch mb-3"><input type="checkbox"
+                                                                      class="custom-control-input theme-choice"
+                                                                      id="light-mode-switch" checked/><label
+                        class="custom-control-label" for="light-mode-switch">Light Mode</label></div>
+                <div class="mb-2"><img src="../static/images/layouts/layout-2.jpg" class="img-fluid img-thumbnail"
+                                       alt="">
+                </div>
+                <div class="custom-control custom-switch mb-3"><input type="checkbox"
+                                                                      class="custom-control-input theme-choice"
+                                                                      id="dark-mode-switch"
+                                                                      data-bsStyle="../static/css/bootstrap-dark.min.css"
+                                                                      data-appStyle="../static/css/app-dark.min.css"/><label
+                        class="custom-control-label" for="dark-mode-switch">Dark Mode</label></div>
+                <div class="mb-2"><img src="../static/images/layouts/layout-3.jpg" class="img-fluid img-thumbnail"
+                                       alt="">
+                </div>
+                <div class="custom-control custom-switch mb-5"><input type="checkbox"
+                                                                      class="custom-control-input theme-choice"
+                                                                      id="rtl-mode-switch"
+                                                                      data-appStyle="../static/css/app-rtl.min.css"/><label
+                        class="custom-control-label" for="rtl-mode-switch">RTL Mode</label></div>
             </div>
-        </footer>
-    </div><!-- end main content--></div><!-- END layout-wrapper --><!-- Right Sidebar -->
-<div class="right-bar">
-    <div data-simplebar class="h-100">
-        <div class="rightbar-title px-3 py-4"><a href="javascript:void(0);" class="right-bar-toggle float-right"><i
-                class="mdi mdi-close noti-icon"></i></a><h5 class="m-0">Settings</h5></div><!-- Settings -->
-        <hr class="mt-0"/>
-        <h6 class="text-center mb-0">Choose Layouts</h6>
-        <div class="p-4">
-            <div class="mb-2"><img src="../static/images/layouts/layout-1.jpg" class="img-fluid img-thumbnail" alt="">
-            </div>
-            <div class="custom-control custom-switch mb-3"><input type="checkbox"
-                                                                  class="custom-control-input theme-choice"
-                                                                  id="light-mode-switch" checked/><label
-                    class="custom-control-label" for="light-mode-switch">Light Mode</label></div>
-            <div class="mb-2"><img src="../static/images/layouts/layout-2.jpg" class="img-fluid img-thumbnail" alt="">
-            </div>
-            <div class="custom-control custom-switch mb-3"><input type="checkbox"
-                                                                  class="custom-control-input theme-choice"
-                                                                  id="dark-mode-switch"
-                                                                  data-bsStyle="../static/css/bootstrap-dark.min.css"
-                                                                  data-appStyle="../static/css/app-dark.min.css"/><label
-                    class="custom-control-label" for="dark-mode-switch">Dark Mode</label></div>
-            <div class="mb-2"><img src="../static/images/layouts/layout-3.jpg" class="img-fluid img-thumbnail" alt="">
-            </div>
-            <div class="custom-control custom-switch mb-5"><input type="checkbox"
-                                                                  class="custom-control-input theme-choice"
-                                                                  id="rtl-mode-switch"
-                                                                  data-appStyle="../static/css/app-rtl.min.css"/><label
-                    class="custom-control-label" for="rtl-mode-switch">RTL Mode</label></div>
-        </div>
-    </div><!-- end slimscroll-menu--></div><!-- /Right-bar --><!-- Right bar overlay-->
-<div class="rightbar-overlay"></div><!-- JAVASCRIPT -->
-<script src="../static/libs/jquery/jquery.min.js"></script>
-<script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../static/libs/metismenu/metisMenu.min.js"></script>
-<script src="../static/libs/simplebar/simplebar.min.js"></script>
-<script src="../static/libs/node-waves/waves.min.js"></script><!-- Required datatable js -->
-<script src="../static/libs/datatables.net/js/jquery.dataTables.min.js"></script>
-<script src="../static/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script><!-- Responsive examples -->
-<script src="../static/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-<script src="../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
-<script src="../static/js/pages/ecommerce-datatables.init.js"></script>
-<script src="../static/js/app.js"></script>
+        </div><!-- end slimscroll-menu--></div><!-- /Right-bar --><!-- Right bar overlay-->
+    <div class="rightbar-overlay"></div>
+</div><!-- JAVASCRIPT -->
+    <script src="../static/libs/jquery/jquery.min.js"></script>
+    <script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/libs/metismenu/metisMenu.min.js"></script>
+    <script src="../static/libs/simplebar/simplebar.min.js"></script>
+    <script src="../static/libs/node-waves/waves.min.js"></script><!-- Required datatable js -->
+    <script src="../static/libs/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="../static/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <!-- Responsive examples -->
+    <script src="../static/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+    <script src="../static/js/pages/ecommerce-datatables.init.js"></script>
+    <script src="../static/js/app.js"></script>
 </body>
 </html>
