--- a/src/main/resources/templates/kanban-shebeiguochengcanshu.html
+++ b/src/main/resources/templates/kanban-shebeiguochengcanshu.html
@@ -14,9 +14,9 @@
     <!-- Responsive datatable examples -->
     <link href="../static/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet"
           type="text/css"/><!-- Bootstrap Css -->
-    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/><!-- Icons Css -->
+    <link href="../static/css/bootstrap.min.css"  rel="stylesheet" type="text/css"/><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
-    <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <link href="../static/css/app.min.css" rel="stylesheet" type="text/css"/>
     <script src="../static/js/echarts.js"></script>
 </head>
 <style>
