--- a/src/main/resources/templates/production_line.html
+++ b/src/main/resources/templates/production_line.html
@@ -14,7 +14,6 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
-
 </head>
 
 <body data-sidebar="light">
@@ -171,8 +170,19 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="page-title-box d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0" style="font-size: x-large;color: #3fc3ee" align="center">欢饮来到主页！</h4>
-
+                            <div class="production_line">
+                                <table border="1">
+                                    <tr>
+                                        <th>Month</th>
+                                        <th>Savings</th>
+                                    </tr>
+                                    <tr>
+                                        <td>January</td>
+                                        <td>$100</td>
+                                    </tr>
+                                </table>
+                            </div>
+                    
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
                                     <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>
