--- a/src/main/resources/templates/ZhuangTaiChaKan.html
+++ b/src/main/resources/templates/ZhuangTaiChaKan.html
@@ -177,18 +177,125 @@
                 </div><!-- end page title -->
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card" style="width: 500px;position: center">
+                        <div class="card" style="width: max-content;position: center">
                             <div class="card-body" align="center">
                                 <div class="media">
-                                    <div class="media-body overflow-hidden"">
-                                        <p class="text-truncate font-size-14 mb-2">当前状态</p>
-                                        <h5 class="mb-0" style="color: #00ff80;font-size: x-large">运行（绿）</h5>
-                                        <h5 class="mb-0" style="color: #efe24b;font-size: x-large">空闲（黄）</h5>
-                                        <h5 class="mb-0" style="color: #1789ff;font-size: x-large">设定（蓝）</h5>
-                                        <h5 class="mb-0" style="color: #ff1741;font-size: x-large">停机（红）</h5>
-                                        <h5 class="mb-0" style="color: #7c8a96;font-size: x-large">离线（灰）</h5>
+<!--                                    <div class="media-body overflow-hidden"">-->
+<!--                                        <p class="text-truncate font-size-14 mb-2">当前状态</p>-->
+<!--                                        <h5 class="mb-0" style="color: #00ff80;font-size: x-large">运行（绿）</h5>-->
+<!--                                        <h5 class="mb-0" style="color: #efe24b;font-size: x-large">空闲（黄）</h5>-->
+<!--                                        <h5 class="mb-0" style="color: #1789ff;font-size: x-large">设定（蓝）</h5>-->
+<!--                                        <h5 class="mb-0" style="color: #ff1741;font-size: x-large">停机（红）</h5>-->
+<!--                                        <h5 class="mb-0" style="color: #7c8a96;font-size: x-large">离线（灰）</h5>-->
+<!--                                    </div>-->
+
+                                    <div class="production_line">
+                                        <span>name1</span>
+                                        <table border="1">
+                                            <tr>
+                                                <th>Month</th>
+                                                <th>Savings</th>
+                                                <th>Savings</th>
+                                                <th>Savings</th>
+                                            </tr>
+                                            <tr>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <div class="production_line">
+                                        <span>name2</span>
+                                        <table border="1">
+                                            <tr>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Savings</th>
+                                            </tr>
+                                            <tr>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                                <td>$100</td>
+                                                <td>$100</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <div class="production_line">
+                                        <span>name2</span>
+                                        <table border="1">
+                                            <tr>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Savings</th>
+                                            </tr>
+                                            <tr>
+                                                <td>January</td>
+                                                <td>January</td>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
+                                <div class="media">
+                                    <div class="production_line">
+                                        <span>name2</span>
+                                        <table border="1">
+                                            <tr>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Savings</th>
+                                            </tr>
+                                            <tr>
+                                                <td>January</td>
+                                                <td>January</td>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <div class="production_line">
+                                        <span>name2</span>
+                                        <table border="1">
+                                            <tr>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Savings</th>
+                                            </tr>
+                                            <tr>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                                <td>$100</td>
+                                                <td>$100</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <div class="production_line">
+                                        <span>name2</span>
+                                        <table border="1">
+                                            <tr>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Month</th>
+                                                <th>Savings</th>
+                                            </tr>
+                                            <tr>
+                                                <td>January</td>
+                                                <td>$100</td>
+                                                <td>$100</td>
+                                                <td>$100</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+
+
                             </div>
                         </div>
 
