--- a/src/main/resources/templates/ZhuangTaiChaKan.html
+++ b/src/main/resources/templates/ZhuangTaiChaKan.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>Dashboard | Nazox - Responsive Bootstrap 4 Admin Dashboard</title>
@@ -178,8 +178,9 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card" style="width: max-content;position: center">
-                            <div class="card-body" align="center">
+                            <div class="card-body">
                                 <div class="media">
+
 <!--                                    <div class="media-body overflow-hidden"">-->
 <!--                                        <p class="text-truncate font-size-14 mb-2">当前状态</p>-->
 <!--                                        <h5 class="mb-0" style="color: #00ff80;font-size: x-large">运行（绿）</h5>-->
@@ -188,130 +189,82 @@
 <!--                                        <h5 class="mb-0" style="color: #ff1741;font-size: x-large">停机（红）</h5>-->
 <!--                                        <h5 class="mb-0" style="color: #7c8a96;font-size: x-large">离线（灰）</h5>-->
 <!--                                    </div>-->
+                                    <div class="production_line">
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
 
-                                    <div class="production_line">
-                                        <span th:text="${data.get(0).getName()}">name1</span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(0).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(0).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(0).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(0).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
+                                        </div>
                                     </div>
                                     <div class="production_line">
-                                        <span th:text="${data.get(1).getName()}?:'name2'"></span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(1).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(1).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(1).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(1).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+
+                                        </div>
                                     </div>
                                     <div class="production_line">
-                                        <span th:text="${data.get(2).getName()}?:'name3'"></span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(2).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(2).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(2).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(2).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+
+                                        </div>
                                     </div>
                                 </div>
+
                                 <div class="media">
                                     <div class="production_line">
-                                        <span th:text="${data.get(3).getName()}?:'name4'"></span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(3).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(3).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(3).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(3).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+
+                                        </div>
                                     </div>
                                     <div class="production_line">
-                                        <span th:text="${data.get(4).getName()}?:'name5'"></span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(4).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(4).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(4).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(4).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+
+                                        </div>
                                     </div>
                                     <div class="production_line">
-                                        <span th:text="${data.get(5).getName()}?:'name6'"></span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(5).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(5).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(5).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(5).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                    <div class="production_line">
-                                        <span th:text="${data.get(6).getName()}?:'name7'"></span>
-                                        <table border="1">
-                                            <tr>
-                                                <th>id</th>
-                                                <th>pid</th>
-                                                <th>external_id</th>
-                                                <th>drivername</th>
-                                            </tr>
-                                            <tr>
-                                                <td th:text="${data.get(6).getId()}?:'id'"></td>
-                                                <td th:text="${data.get(6).getPid()}?:'pid'"></td>
-                                                <td th:text="${data.get(6).getExternalId()}?:'external_id'"></td>
-                                                <td th:text="${data.get(6).getDrivername()}?:'drivername'"></td>
-                                            </tr>
-                                        </table>
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+
+                                        </div>
                                     </div>
                                 </div>
-
+                                <div>
+                                    <div class="production_line">
+                                        <p class="name"><strong>name</strong></p>
+                                        <div class="span1">
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
                             </div>
                         </div>
@@ -324,7 +277,7 @@
 
 
         </div><!-- end main content--></div><!-- END layout-wrapper --><!-- Right Sidebar -->
-</div>
+
     <!-- JAVASCRIPT -->
     <script src="../static/libs/jquery/jquery.min.js"></script>
     <script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
