--- a/src/main/resources/templates/ZhuangTaiChaKan.html
+++ b/src/main/resources/templates/ZhuangTaiChaKan.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
     <title>Dashboard | Nazox - Responsive Bootstrap 4 Admin Dashboard</title>
@@ -190,32 +190,32 @@
 <!--                                        <h5 class="mb-0" style="color: #7c8a96;font-size: x-large">离线（灰）</h5>-->
 <!--                                    </div>-->
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(0).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(0).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(0).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(0).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(0).getDrivername()}">drivername</span></br>
 
                                         </div>
                                     </div>
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(1).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(1).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(1).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(1).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(1).getDrivername()}">drivername</span></br>
 
                                         </div>
                                     </div>
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(2).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(2).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(2).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(2).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(2).getDrivername()}">drivername</span></br>
 
                                         </div>
                                     </div>
@@ -223,44 +223,44 @@
 
                                 <div class="media">
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(3).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(3).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(3).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(3).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(3).getDrivername()}">drivername</span></br>
 
                                         </div>
                                     </div>
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(4).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(4).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(4).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(4).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(4).getDrivername()}">drivername</span></br>
 
                                         </div>
                                     </div>
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(5).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(5).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(5).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(5).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(5).getDrivername()}">drivername</span></br>
 
                                         </div>
                                     </div>
                                 </div>
                                 <div>
                                     <div class="production_line">
-                                        <p class="name"><strong>name</strong></p>
+                                        <p class="name"><strong th:text="${data.get(6).getName()}">name</strong></p>
                                         <div class="span1">
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
-                                            hihs：<span class="span2">csvfervcerv</span></br>
+                                            id：<span class="span2" th:text="${data.get(6).getId()}">id</span></br>
+                                            pid：<span class="span2" th:text="${data.get(6).getPid()}">pid</span></br>
+                                            external_id：<span class="span2" th:text="${data.get(6).getExternalId()}">external_id</span></br>
+                                            drivername：<span class="span2" th:text="${data.get(6).getDrivername()}">drivername</span></br>
                                         </div>
                                     </div>
                                 </div>
