--- a/src/main/resources/templates/knifes.html
+++ b/src/main/resources/templates/knifes.html
@@ -156,7 +156,7 @@
                 <!-- Left Menu Start -->
                 <ul class="metismenu list-unstyled mm-show" id="side-menu">
                     <li class="menu-title">菜单</li>
-                    <li class="mm-active"><a href="index.html" class="waves-effect active"><i class="ri-dashboard-line"></i>
+                    <li class="mm-active"><a th:href="@{/index}" class="waves-effect active"><i class="ri-dashboard-line"></i>
                         <span class="badge badge-pill badge-success float-right">99+</span>
                         <span>主页</span></a></li>
                     <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i class="ri-calendar-2-line"></i><span>设备状态看板</span></a>
